k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmp-gateway
spec:
  selector:
    app: cmp-gateway
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
