k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cms.api.bethelnet.au
        - api.tccr.lk
      secretName: cmp-tls
  rules:
    - host: cms.api.bethelnet.au
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: cmp-gateway
                port:
                  number: 3000
    - host: api.tccr.lk
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: cmp-gateway
                port:
                  number: 3000
